--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,33 +1,34 @@
-<div class="wrapper site-footer__inner">
-  <div class="site-footer__countdown">
-    <span class="site-footer__label">Showtime:</span>
+<footer class="site-footer">
+  <div class="wrapper site-footer__inner">
+    <div class="site-footer__countdown">
+      <span class="site-footer__label">Showtime:</span>
 
-    <span class="countdown-pill">
-      <span id="show-countdown" class="countdown-pill__time">Loading…</span>
-      <span id="show-weeks" class="countdown-pill__weeks"></span>
-    </span>
+      <span class="countdown-pill">
+        <span id="show-countdown" class="countdown-pill__time">Loading…</span>
+        <span id="show-weeks" class="countdown-pill__weeks"></span>
+      </span>
 
-    <span class="site-footer__date">July 19, 2026</span>
-  </div>
+      <span class="site-footer__date">July 19, 2026</span>
+    </div>
 
-  <div class="site-footer__meta">
-    <a class="site-footer__instagram" href="https://www.instagram.com/brockmasterflex/" target="_blank"
-      rel="noopener noreferrer" aria-label="Follow me on Instagram">
-      <!-- Instagram icon (inline SVG) -->
-      <svg viewBox="0 0 24 24" aria-hidden="true">
-        <path
-          d="M7.75 2h8.5C19.55 2 22 4.45 22 7.75v8.5C22 19.55 19.55 22 16.25 22h-8.5C4.45 22 2 19.55 2 16.25v-8.5C2 4.45 4.45 2 7.75 2zm0 1.5C5.28 3.5 3.5 5.28 3.5 7.75v8.5c0 2.47 1.78 4.25 4.25 4.25h8.5c2.47 0 4.25-1.78 4.25-4.25v-8.5c0-2.47-1.78-4.25-4.25-4.25h-8.5z" />
-        <path d="M12 7a5 5 0 1 0 0 10 5 5 0 0 0 0-10zm0 1.5a3.5 3.5 0 1 1 0 7 3.5 3.5 0 0 1 0-7z" />
-        <circle cx="17.5" cy="6.5" r="1.2" />
-      </svg>
-      <span>@brockmasterflex</span>
-    </a>
+    <div class="site-footer__meta">
+      <a class="site-footer__instagram" href="https://www.instagram.com/brockmasterflex/" target="_blank"
+        rel="noopener noreferrer" aria-label="Follow me on Instagram">
+        <svg viewBox="0 0 24 24" aria-hidden="true">
+          <path
+            d="M7.75 2h8.5C19.55 2 22 4.45 22 7.75v8.5C22 19.55 19.55 22 16.25 22h-8.5C4.45 22 2 19.55 2 16.25v-8.5C2 4.45 4.45 2 7.75 2zm0 1.5C5.28 3.5 3.5 5.28 3.5 7.75v8.5c0 2.47 1.78 4.25 4.25 4.25h8.5c2.47 0 4.25-1.78 4.25-4.25v-8.5c0-2.47-1.78-4.25-4.25-4.25h-8.5z" />
+          <path d="M12 7a5 5 0 1 0 0 10 5 5 0 0 0 0-10zm0 1.5a3.5 3.5 0 1 1 0 7 3.5 3.5 0 0 1 0-7z" />
+          <circle cx="17.5" cy="6.5" r="1.2" />
+        </svg>
+        <span>@brockmasterflex</span>
+      </a>
 
-    <div class="site-footer__credit">
-      a robert brockie production
+      <div class="site-footer__credit">
+        a robert brockie production
+      </div>
     </div>
   </div>
-</div>
+</footer>
 
 <script>
   (function () {
