Link my site in the footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
       </a>
 
       <div class="site-footer__credit">
-        a robert brockie production
+        a <a href="https://robertbrockie.com" target="_blank" rel="noopener noreferrer">robert brockie production</a>
       </div>
     </div>
   </div>
