--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,6 @@
         <span id="show-countdown" class="countdown-pill__time">Loading…</span>
         <span id="show-weeks" class="countdown-pill__weeks"></span>
       </span>
-
-      <span class="site-footer__date">July 19, 2026</span>
     </div>
 
     <div class="site-footer__meta">
@@ -24,7 +22,7 @@
       </a>
 
       <div class="site-footer__credit">
-        a <a href="https://robertbrockie.com" target="_blank" rel="noopener noreferrer">robert brockie production</a>
+        a <a href="https://robertbrockie.com" target="_blank" rel="noopener noreferrer">robert brockie</a> production
       </div>
     </div>
   </div>
