--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,13 +2,36 @@
 layout: default
 ---
 
-<hr />
+<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
-<div id="disqus_thread"></div>
+    <header class="post-header">
+        <h1 class="post-title p-name" itemprop="name headline">
+            {{ page.title | escape }}
+        </h1>
 
-<script src="https://flex-robertbrockie-com.disqus.com/embed.js" data-timestamp="{{ site.time | date: '%s' }}" async>
-</script>
+        <p class="post-meta">
+            <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+                {{ page.date | date: "%B %-d, %Y" }}
+            </time>
+        </p>
+    </header>
 
-<noscript>
-    Please enable JavaScript to view the comments powered by Disqus.
-</noscript>
+    <div class="post-content e-content" itemprop="articleBody">
+        {{ content }}
+    </div>
+
+    {% if page.comments != false %}
+    <hr />
+
+    <div id="disqus_thread"></div>
+
+    <script src="https://flex-robertbrockie-com.disqus.com/embed.js" data-timestamp="{{ site.time | date: '%s' }}"
+        async>
+        </script>
+
+    <noscript>
+        Please enable JavaScript to view the comments powered by Disqus.
+    </noscript>
+    {% endif %}
+
+</article>
