--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
 
     <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""
-            referrerpolicy="no-referrer-when-downgrade" /></noscript>
+    <noscript>
+        <img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""
+            referrerpolicy="no-referrer-when-downgrade" />
+    </noscript>
 </head>
