--- a/assets/main.scss
+++ b/assets/main.scss
@@ -212,8 +212,8 @@ hr {
 
 // ---- Post navigation ----
 .post-nav {
-  margin-top: 40px;
-  padding-top: 20px;
+  margin: 40px 0;
+  padding: 20px 0;
   border-top: 1px solid $border;
 
   display: flex;
