--- a/assets/main.scss
+++ b/assets/main.scss
@@ -212,7 +212,7 @@ hr {
 
 // ---- Post navigation ----
 .post-nav {
-  margin: 40px 0;
+  margin: 40px 20px 0;
   padding: 20px 0;
   border-top: 1px solid $border;
 
