--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -13,17 +13,19 @@
             </a>
         </div>
 
-        <!--
         <nav class="site-header__nav">
             <a href="{{ '/' | relative_url }}" {% if page.url=='/' %}aria-current="page" {% endif %}>
                 Home
             </a>
 
+            <a href="{{ '/search/' | relative_url }}">Search</a>
+
+            <!--
             <a href="{{ '/exercises/' | relative_url }}" {% if page.url contains '/exercises' %}aria-current="page" {%
                 endif %}>
                 Exercises
             </a>
+            -->
         </nav>
-        -->
     </div>
 </header>
