--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -16,6 +16,8 @@
         <nav class="site-header__nav">
             <a href="{{ '/search/' | relative_url }}" {% if page.url contains '/search' %}aria-current="page" {% endif
                 %}>Search</a>
+            <a href="{{ '/progress/' | relative_url }}" {% if page.url contains '/progress' %}aria-current="page" {%
+                endif %}>Progress</a>
 
             <!--
             <a href="{{ '/exercises/' | relative_url }}" {% if page.url contains '/exercises' %}aria-current="page" {%
