--- a/assets/main.scss
+++ b/assets/main.scss
@@ -89,6 +89,9 @@ hr {
 .site-header__avatar {
     width: 110px;
     height: 110px;
+    min-width: 110px;
+    min-height: 110px;
+    flex-shrink: 0;
     object-fit: cover;
     border-radius: 50%;
     border: 2px solid rgba(246, 226, 127, .6);
@@ -419,10 +422,30 @@ hr {
 }
 
 
+@media (max-width: 720px) {
+    .site-header__inner {
+        flex-wrap: wrap;
+    }
+
+    .site-header__nav {
+        width: 100%;
+        justify-content: flex-start;
+        margin-top: 16px;
+        padding-top: 16px;
+        border-top: 1px solid rgba(0, 0, 0, 0.08);
+    }
+}
+
 @media (max-width: 600px) {
     .site-header__avatar {
-        width: 96px;
-        height: 96px;
+        width: 80px;
+        height: 80px;
+        min-width: 80px;
+        min-height: 80px;
+    }
+
+    .site-header__inner {
+        justify-content: center;
     }
 
     .site-header__text {
