--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 {%- include head.html -%}
 
 <body>
+    {%- include cut-countdown.html -%}
     {%- include site-header.html -%}
 
     <main class="page-content" aria-label="Content">
